test/expected/explain_o_exclam_2i.out
explain bool operator!(int, int)
                       ^
24: error: operator "!" can have at most 1 parameter
